# freespaces

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  sqlx-data.json
.github/workflows/: deploy.yml
frontend/: index.html  next.config.js  package-lock.json  package.json
frontend/components/: index.tsx
frontend/components/Alert/: Alert.tsx
frontend/components/Grid/: Grid.tsx  index.tsx
frontend/pages/: index.tsx
migrations/: 0_occupancy_level.sql  1_locations.sql  20230406163846_images.sql  20230406163851_location_image.sql  2_occupancies.sql
src/: config.rs  error.rs  lib.rs  log.rs  main.rs
src/routes/: fetch.rs  health.rs  images.rs  mod.rs  static_files.rs  submit.rs
